syntax = "proto3";

import "serverinfo.proto";

package command;

// 请求服务器连接验证
message ReqServerVerify {
	ServerInfo Info = 1;	
}

// 初始化路由服务器列表
message NotifyRouteServerInit {
	repeated ServerInfo Serverlist = 1;
}

// 新增路由服务器信息
message NotifyRouteServerAdd {
	ServerInfo Info = 1;
}

